# applyaudiosr

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
applyaudiosr/: AudioSuperResolutionWAVProcessor.py  __init__.py  constants.py  main.py
applyaudiosr/utils/: __init__.py  common.py
tests/: test_AudioSuperResolutionWAVProcessor.py
